--- a/.github/workflows/workflow-templates/test.yaml
+++ b/.github/workflows/workflow-templates/test.yaml
@@ -1,56 +1,17 @@
-#################################
-#################################
-## Super Linter GitHub Actions ##
-#################################
-#################################
-name: 04-2. Lint Code Base
+name: Octo Organization CI
 
-#
-# Documentation:
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions
-#
-
-#############################
-# Start the job on all push #
-#############################
 on:
   push:
-    branches-ignore: [main]
-    # Remove the line above to run when pushing to main
+    branches: [ $default-branch ]
   pull_request:
-    branches: [main]
-  workflow_call:
+    branches: [ $default-branch ]
 
-###############
-# Set the Job #
-###############
 jobs:
   build:
-    # Name the Job
-    name: Lint Code Base
-    # Set the agent to run on
     runs-on: ubuntu-latest
 
-    ##################
-    # Load all steps #
-    ##################
     steps:
-      ##########################
-      # Checkout the code base #
-      ##########################
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      ################################
-      # Run Linter against code base #
-      ################################
-      - name: Lint Code Base
-        uses: github/super-linter@v5
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                
+      - name: Run a one-line script
+        run: echo Hello from Octo Organization
